#856: Code modernization in CreateLocation UC