@@ -27,19 +27,10 @@ import com.echothree.model.control.warehouse.common.workflow.LocationStatusConst
 import com.echothree.model.control.warehouse.server.control.WarehouseControl;
 import com.echothree.model.control.warehouse.server.logic.LocationUseTypeLogic;
 import com.echothree.model.control.workflow.server.control.WorkflowControl;
-import com.echothree.model.data.core.server.entity.EntityInstance;
-import com.echothree.model.data.inventory.server.entity.InventoryLocationGroup;
-import com.echothree.model.data.party.server.entity.Party;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.warehouse.server.entity.Location;
 import com.echothree.model.data.warehouse.server.entity.LocationNameElement;
-import com.echothree.model.data.warehouse.server.entity.LocationNameElementDetail;
-import com.echothree.model.data.warehouse.server.entity.LocationType;
-import com.echothree.model.data.warehouse.server.entity.Warehouse;
-import com.echothree.model.data.workflow.server.entity.WorkflowEntityStatus;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
-import com.echothree.util.common.persistence.BasePK;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
@@ -47,12 +38,7 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 public class CreateLocationCommand
@@ -69,7 +55,7 @@ public class CreateLocationCommand
                 ))
         ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("WarehouseName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("LocationName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("LocationTypeName", FieldType.ENTITY_NAME, true, null, null),
@@ -77,7 +63,7 @@ public class CreateLocationCommand
                 new FieldDefinition("Velocity", FieldType.UNSIGNED_INTEGER, true, null, null),
                 new FieldDefinition("InventoryLocationGroupName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-                ));
+        );
     }
     
     /** Creates a new instance of CreateLocationCommand */
@@ -89,36 +75,36 @@ public class CreateLocationCommand
     protected BaseResult execute() {
         var result = WarehouseResultFactory.getCreateLocationResult();
         var warehouseControl = Session.getModelController(WarehouseControl.class);
-        String warehouseName = form.getWarehouseName();
-        Warehouse warehouse = warehouseControl.getWarehouseByName(warehouseName);
+        var warehouseName = form.getWarehouseName();
+        var warehouse = warehouseControl.getWarehouseByName(warehouseName);
         
         if(warehouse != null) {
-            Party warehouseParty = warehouse.getParty();
-            String locationName = form.getLocationName();
-            Location location = warehouseControl.getLocationByName(warehouseParty, locationName);
+            var warehouseParty = warehouse.getParty();
+            var locationName = form.getLocationName();
+            var location = warehouseControl.getLocationByName(warehouseParty, locationName);
             
             if(location == null) {
-                String locationTypeName = form.getLocationTypeName();
-                LocationType locationType = warehouseControl.getLocationTypeByName(warehouseParty, locationTypeName);
+                var locationTypeName = form.getLocationTypeName();
+                var locationType = warehouseControl.getLocationTypeByName(warehouseParty, locationTypeName);
                 
                 if(locationType != null) {
-                    Collection locationNameElements = warehouseControl.getLocationNameElementsByLocationType(locationType);
-                    int endIndex = 0;
-                    boolean validLocationName = true;
+                    var locationNameElements = warehouseControl.getLocationNameElementsByLocationType(locationType);
+                    var endIndex = 0;
+                    var validLocationName = true;
                     
-                    for(Iterator iter = locationNameElements.iterator(); iter.hasNext() && validLocationName;) {
-                        LocationNameElement locationNameElement = (LocationNameElement)iter.next();
-                        LocationNameElementDetail locationNameElementDetail = locationNameElement.getLastDetail();
-                        String validationPattern = locationNameElementDetail.getValidationPattern();
+                    for(var iter = locationNameElements.iterator(); iter.hasNext() && validLocationName;) {
+                        var locationNameElement = (LocationNameElement)iter.next();
+                        var locationNameElementDetail = locationNameElement.getLastDetail();
+                        var validationPattern = locationNameElementDetail.getValidationPattern();
                         
                         if(validationPattern != null) {
                             try {
-                                Pattern pattern = Pattern.compile(validationPattern);
-                                int beginIndex = locationNameElementDetail.getOffset();
+                                var pattern = Pattern.compile(validationPattern);
+                                var beginIndex = locationNameElementDetail.getOffset();
                                 
                                 endIndex = beginIndex + locationNameElementDetail.getLength();
-                                String substr = locationName.substring(beginIndex, endIndex);
-                                Matcher m = pattern.matcher(substr);
+                                var substr = locationName.substring(beginIndex, endIndex);
+                                var m = pattern.matcher(substr);
                                 
                                 if(!m.matches()) {
                                     validLocationName = false;
@@ -146,31 +132,32 @@ public class CreateLocationCommand
                             
                             if(!multipleUseError) {
                                 var inventoryControl = Session.getModelController(InventoryControl.class);
-                                String inventoryLocationGroupName = form.getInventoryLocationGroupName();
-                                InventoryLocationGroup inventoryLocationGroup = inventoryControl.getInventoryLocationGroupByName(warehouseParty, inventoryLocationGroupName);
+                                var inventoryLocationGroupName = form.getInventoryLocationGroupName();
+                                var inventoryLocationGroup = inventoryControl.getInventoryLocationGroupByName(warehouseParty, inventoryLocationGroupName);
                                 
                                 if(inventoryLocationGroup != null) {
                                     var coreControl = getCoreControl();
-                                    Integer velocity = Integer.valueOf(form.getVelocity());
+                                    var velocity = Integer.valueOf(form.getVelocity());
                                     var workflowControl = Session.getModelController(WorkflowControl.class);
-                                    BasePK createdBy = getPartyPK();
+                                    var createdBy = getPartyPK();
                                     var description = form.getDescription();
                                     
                                     location = warehouseControl.createLocation(warehouseParty, locationName, locationType, locationUseType,
                                             velocity, inventoryLocationGroup, createdBy);
-                                    
-                                    EntityInstance entityInstance = coreControl.getEntityInstanceByBasePK(inventoryLocationGroup.getPrimaryKey());
-                                    WorkflowEntityStatus workflowEntityStatus = workflowControl.getWorkflowEntityStatusByEntityInstanceUsingNames(InventoryLocationGroupStatusConstants.Workflow_INVENTORY_LOCATION_GROUP_STATUS, entityInstance);
-                                    String workflowStepName = workflowEntityStatus.getWorkflowStep().getLastDetail().getWorkflowStepName();
-                                    String workflowEntranceName = null;
-                                    
-                                    if(workflowStepName.equals(InventoryLocationGroupStatusConstants.WorkflowStep_ACTIVE))
-                                        workflowEntranceName = LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_ACTIVE;
-                                    else if(workflowStepName.equals(InventoryLocationGroupStatusConstants.WorkflowStep_INVENTORY_PREP))
-                                        workflowEntranceName = LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_INVENTORY_PREP;
-                                    else if(workflowStepName.equals(InventoryLocationGroupStatusConstants.WorkflowStep_INVENTORY))
-                                        workflowEntranceName = LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_INVENTORY;
-                                    
+
+                                    var entityInstance = coreControl.getEntityInstanceByBasePK(inventoryLocationGroup.getPrimaryKey());
+                                    var workflowEntityStatus = workflowControl.getWorkflowEntityStatusByEntityInstanceUsingNames(InventoryLocationGroupStatusConstants.Workflow_INVENTORY_LOCATION_GROUP_STATUS, entityInstance);
+                                    var workflowStepName = workflowEntityStatus.getWorkflowStep().getLastDetail().getWorkflowStepName();
+                                    var workflowEntranceName = switch(workflowStepName) {
+                                        case InventoryLocationGroupStatusConstants.WorkflowStep_ACTIVE ->
+                                                LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_ACTIVE;
+                                        case InventoryLocationGroupStatusConstants.WorkflowStep_INVENTORY_PREP ->
+                                                LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_INVENTORY_PREP;
+                                        case InventoryLocationGroupStatusConstants.WorkflowStep_INVENTORY ->
+                                                LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_INVENTORY;
+                                        default -> null;
+                                    };
+
                                     entityInstance = coreControl.getEntityInstanceByBasePK(location.getPrimaryKey());
                                     workflowControl.addEntityToWorkflowUsingNames(null, LocationStatusConstants.Workflow_LOCATION_STATUS, workflowEntranceName, entityInstance, null, null, createdBy);
                                     
